--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
-# Temel paketler
-numpy>=1.21.0
-matplotlib>=3.4.0
-wandb>=0.12.0
-tqdm>=4.62.0
-psutil>=5.8.0
-gputil>=1.4.0
-pillow>=8.3.1
-scipy>=1.7.0
-ipywidgets>=7.6.0
+# Web framework
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
 
-# PyTorch ve ilgili paketler (AMD ROCm)
---extra-index-url https://download.pytorch.org/whl/rocm5.6
-torch>=2.0.0
-torchvision>=0.15.0
-torchaudio>=2.0.0
+# 3D işleme
+trimesh==4.0.5
+numpy==1.26.2
+meshio==5.3.4
+open3d==0.17.0
+
+# Görüntü işleme
+Pillow==10.1.0
+opencv-python==4.8.1.78
+
+# Yardımcı kütüphaneler
+pyyaml==6.0.1
+python-dotenv==1.0.0
+tqdm==4.66.1
+requests==2.31.0
+
+# Geliştirme araçları
+pytest==7.4.3
+black==23.11.0
+flake8==6.1.0
+mypy==1.7.1
